@@ -64,11 +64,11 @@ while (<DOC>) {
   s/\\chapter\s*{(.*)}/\n\n=head1 NAME\n\nlibPARI - $1\n\n=head1 DESCRIPTION\n\n/;
   s/\\section\s*{(.*)}/"\n\n=head1 " . indexify($1) . "\n\n"/e;
   # Try to delimit by :
-  s/\\subsec(?:ref)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}([^\n:]*):\s*/"\n\n=head2 " . indexify("$1$3") . "\n\n"/e;
-  s/\\subsubsec(?:ref)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}([^\n:]*):\s*/"\n\n=item " . indexify("$1$3") . "\n\n"/e;
+  s/\\subsec(?:ref|idx|op)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}([^\n:]*):\s*/"\n\n=head2 " . indexify("$1$3") . "\n\n"/e;
+  s/\\subsubsec(?:ref|idx|op)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}([^\n:]*):\s*/"\n\n=item " . indexify("$1$3") . "\n\n"/e;
   # Try to delimit by ' '
-  s/\\subsec(?:ref)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}(\S*)\s+/"\n\n=head2 " . indexify("$1$3") . "\n\n"/e;
-  s/\\subsec(?:ref|title)?\s*{(([^{}]+(?=[{}])|{[^{}]*})+)}:?\s*/"\n\n=head2 " . indexify("$1") . "\n\n"/e;
+  s/\\subsec(?:ref|idx|op)?\s*{(([^{}]+(?=[{}])|{[^{}]+})+)}(\S*)\s+/"\n\n=head2 " . indexify("$1$3") . "\n\n"/e;
+  s/\\subsec(?:ref|title|idx|op)?\s*{(([^{}]+(?=[{}])|{[^{}]*})+)}:?\s*/"\n\n=head2 " . indexify("$1") . "\n\n"/e;
   &TeXprint;
 }
 if ($pipe) {
@@ -89,7 +89,7 @@ sub wrap_code {
 
 # sref is invisible reference
 # tec(a,b) is ref(a)tt(b)
-sub TeXprint {
+sub TeXprint_old {
   # d?frac{}{} ???  bullet ???
   s/\\\///g;
   s/\\([% &|\#])/$1/g;
@@ -151,3 +151,92 @@ sub TeXprint {
   s/\\vers(\{\}|\b|(?=[\d_]))/$version/ if defined $version;
   print;
 }
+
+sub TeXprint {
+  # d?frac{}{} ???  bullet ???
+  s/\\title\s*\{[^{}]*\}(\s*\\centerline\s*\{[^{}]*\})?//;
+  s/([^\\])%.*$/$1/gm;
+  s/\\kbd\{/\{\\tt /g;
+  s/\\\///g;
+  s/\\([% &|\#\\])/$1/g;
+  s/\\[lc]?dots\b/.../g;
+  s/\\cdot\b/ . /g;
+  s/\\mid\b/ | /g;
+  s/(\\string)?\\_/_/g;
+  s/\\(hat\b|\^)({\\?\s*})?/^/g;
+  s/\\pow(?![a-zA-z])/^/g;
+  s/(^|[^\\])~/$1 /g;
+  s/\\[,;]/ /g;
+  s/\\ne(?![a-zA-Z])/ != /g;
+  s/\\enspace(\b|(?=[\d_]))/ /g;
+  s/\\~(\{(\\\s*)?\})?/~/g;
+  s/\\tilde(\{\\\s+\})?/~/g;
+  s/\\til(?![a-zA-Z])/~/g;
+  s/\\hbox{}/ /g;
+  s/\\parskip.*/\n/g;		# Up to end of the line
+  s/\\(equiv|approx|simeq)(\b|(?=[\d_]))/ ~ /g;
+  s/\\neq(\b|(?=[\d_]))/!=/g;
+  s/([A-Z])\</$1 < /g;
+  s/\>/E<gt>/g;
+  s/\\leq?(\b|(?=[\d_]))/E<lt>=/g;
+  s/\\geq?(\b|(?=[\d_]))/E<gt>=/g;
+  s/\\\$/F<dollar>/g;
+  s/\$\\bf\b\s*([^\$]+)\$/C<B<$1>>/g;
+  s/\$+([^\$]+)\$+/C<$1>/g;
+  s/\\s(?:ref|idx){\s*([^{}]*)}/X<$1>/g;
+  s/\\(?:ref|idx){\s*([^{}]*)}/X<$1>$1/g;
+  s/\\tec{\s*([^{}]*)}{\s*([^{}]*)}/X<$1>$1C<$2>/g;
+  s/\\text{\s*([^{}]*)}/$1/g;
+  s/\{\\text\s*([^{}])}/$1/g;
+  s/^{\\tt\s*\\obeylines\s*(([^{}]+(?=[{}])|{[^{}]*})+)}/wrap_code($1)/e;
+  s/{\\tt\b\s*((\\.|[^{}])*)}/C<$1>/g;
+  s/{\\bf\b\s*(([^{}]+(?=[{}])|{[^{}]+})+)}/B<$1>/g;
+  s/\\Bbb\b\s*(\w)/B<I<$1>>/g;
+  s/\\([NZQRC])\1(?![a-zA-Z])/B<I<$1>>/g;
+  s/\\Z(\b|(?=[\d_]))/B<I<Z>>/g;
+  s/\\teb{\s*([^{}]*)}/$1/g;
+  s/{\\(sl|it)\b\s*([^{}]*)}/I<$2>/g;
+  #s/\\(subsec(ref)?|smallskip|sl|sref[ a-z]*|bf|ref|Bbb|text|tt|\|)[ \t]*//g;
+  s/\\(backslash|bs)\s*(\b|(?=[\d_]|C\<))/\\/g;
+  s/\\(log|sin|cos|lim|tan|mod|sqrt|exp|ln|det)(\b|(?=[\d_]))/ F<$1> /g;
+  s/\\bmod\b/ mod /g;
+  s/\\TeX\{\}/TeX/g;
+  s/\\TeX(\W)/TeX$1/g;
+  s/\\((small|big)skip|newcolumn|(short)?copyrightnotice|hfill|break|par|leavevmode|strut|endgroup|bye)(\b|(?=[\d_]))[ \t]*/\n\n/g;
+  s/^[ \t]*\\hskip\s*\w+//gm;
+  s/\\pm(\b|(?=[\d_]))/F<+->/g;
+  s/\\(left|right)(\b|(?=[\d_]))//g;
+  s/\\(q?quad|vfill|eject|centerline)(\b|(?=[\d_]))/    /g;
+  s/\\obr(\b|(?=[\d_]))/\{/g;
+  s/\\cbr(\b|(?=[\d_]))/\}/g;
+  s/\\quo(\b|(?=[\d_]))/\"/g;
+  s/(^|\s)\{(\w+)\}/$1$2/g;
+  s/\\([{}])/$1/g;
+  s/'(\W)'/'C<$1>'/g;
+  s/\\(Alpha | Beta | Chi | Delta | Epsilon | Phi | Gamma
+       | Eta | Iota | vartheta | Kappa | Lambda | Mu | Nu | Omicron
+       | Pi | Theta | Rho | Sigma | Tau | Ypsilon | varsigma | Omega
+       | Xi | Psi | Zeta | alpha | beta | chi | delta | varepsilon | phi | gamma
+       | eta | iota | varphi | kappa | lambda | mu | nu | omicron
+       | pi | theta | rho | sigma | tau | ypsilon | varpi | omega
+       | xi | psi | zeta 
+       | expr | seq | args | gcd | sum | prod) (\b|(?=[\d_]|[A-Z]<))/F<$1>/xg;
+  s/\\vers(\{\}|\b|(?=[\d_]))/$version/ if defined $version;
+  # for refcard:
+  s/{\\rm\b\s*([^{}]*)}/$1/g;
+  s/\\key\b\s*{(.*)}{(.*)}[ \t]*\n/\n\n=item C<$2>\n\n$1\n\n/mg;
+  s/\\metax\b\s*{(.*)}\s*{\s*(\w+)(?=C\<)(.*)}[ \t]*\n/\n\n=item C<L<$2>$3>\n\n$1\n\n/mg;
+  s/\\metax\b\s*{(.*)}\s*{(.*)}[ \t]*\n/\n\n=item C<$2>\n\n$1\n\n/mg;
+  s/\\hbox(\b|(?=[A-Z]\<))//g;
+  # s/\\kbd\{([^{}]*)\}/\\$1/g;
+  s/C\<\{\}=/C\<=/g;
+  s/\\rightarrow(?![a-zA-Z])/C<--E<gt>>/g;
+  s/\\longleftrightarrow(?![a-zA-Z])/C<E<lt>-----E<gt>>/g;
+  s/\\begin(double)?indentedkeys/\n\n=over\n\n/g;
+  s/\\end(double)?indentedkeys/\n\n=back\n\n/g;
+  # begin/end group appear in very special context only
+  s/\\begingroup\W.*//s;		# Eat to the end
+  s/\n{3,}/\n\n/g;
+  print;
+}
+
